--- a/Feedback Ui Design/index.html
+++ b/Feedback Ui Design/index.html
@@ -4,10 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feedback Ui Design</title>
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="panel-container" id="panel">
+    <strong>How satisfied are you with our customer support performance?</strong>
+    <div class="ratings-container">
+      <div class="rating">
+        <img src="https://www.svgrepo.com/show/166243/unhappy.svg" alt="Unhappy">
+        <small>Unhappy</small>
+      </div>
+      <div class="rating">
+        <img src="https://static-00.iconduck.com/assets.00/neutral-face-emoji-512x512-v6ht2fmi.png" alt="Neutral">
+        <small>Neutral</small>
+      </div>
+      <div class="rating active">
+        <img src="https://www.svgrepo.com/show/34024/happy.svg" alt="Satisfied">
+        <small>Satisfied</small>
+      </div>
+    </div>
+    <button class="btn" id="send">Send Review</button>
+  </div>
 
   <script src="script.js"></script>
 </body>
