--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -11,10 +11,7 @@
   <form id="form">
     <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
 
-    <ul class="todos" id="todos">
-      <li>First Todo</li>
-      <li>Second Todo</li>
-    </ul>
+    <ul class="todos" id="todos"></ul>
   </form>
 
   <small>Left click to toggle completed <br> Right click to delete todo</small>
